<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_robotcar"
            android:icon="@drawable/ic_menu_robotcar"
            android:title="@string/menu_robotcar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_camera_settings" />
        <item
            android:id="@+id/nav_configurations"
            android:icon="@drawable/ic_menu_configurations"
            android:title="@string/menu_app_settings" />

    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_logout" />
</menu>