<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mainrobot.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mainrobot.ui.settings.SettingsFragment"
        android:label="@string/menu_camera_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_configurations"
        android:name="com.example.mainrobot.ui.configurations.ConfigurationsFragment"
        android:label="@string/menu_configurations"
        tools:layout="@layout/fragment_configurations" />
    <fragment
        android:id="@+id/nav_robotcar"
        android:name="com.example.mainrobot.ui.robotcar.RobotCarFragment"
        android:label="@string/menu_robotcar"
        tools:layout="@layout/fragment_robotcar" />

    <action
        android:id="@+id/nav_logout"
        app:destination="@id/nav_login" />

    <activity
        android:id="@+id/nav_login"
        android:name="com.example.mainrobot.LoginActivity"
        android:label="Login" />
</navigation>
